--- a/deployment/templates/deployment/request_dog_list.html
+++ b/deployment/templates/deployment/request_dog_list.html
@@ -133,10 +133,10 @@
 
 	$(document).ready(function() {
 		$('#tabledata1').DataTable( {
-        "order": []
+        "order": [[ 0, "desc" ]]
         });
         $('#tabledata2').DataTable( {
-        "order": []
+        "order": [[ 0, "desc" ]]
         });
 		$('.menu .item').tab();
 	});
