--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -14,7 +14,7 @@
                                 <div class="ui small statistic">
                                     <div class="value">
                                         <i class="user purple icon"></i>
-                                        <i class="paw purple icon"></i>
+                                        <!-- <i class="paw purple icon"></i> -->
                                         <i class="purple icon">{{c_count}}</i>
                                         
                                     </div>
@@ -31,7 +31,7 @@
                                 <div class="ui small statistic">
                                     <div class="value">
                                         <i class="question black icon"></i>
-                                        <i class="paw black icon"></i>
+                                        <!-- <i class="paw black icon"></i> -->
                                         <i class="black icon">{{up_count}}</i>
                                     </div>
                                     <div class="label">
