--- a/unitmanagement/templates/unitmanagement/choose_handler_list.html
+++ b/unitmanagement/templates/unitmanagement/choose_handler_list.html
@@ -51,7 +51,8 @@
                 <table class="ui column celled inverted orange table" id = 'tabledata'>
                     <thead class="center aligned">
                         <th class="two wide"></th>
-                        <th class="eight wide">Name</th>
+                        <th >Name</th>
+                        <th class="three wide">Rank</th>
                         <th class="three wide">Passed/All K9 Trained</th>
                         <th class="three wide">{{k9.capability}} Success Rating</th>
                     </thead>
@@ -61,6 +62,7 @@
                         <tr>
                             <td class="center aligned">{{a.tag}}</td>
                             <td>{{a.choice_label}}</td>
+                            <td  class="center aligned">{{g.3}}</td>
                             <td  class="center aligned">{{g.0}}/{{g.1}}</td>
                             <td  class="center aligned">{{g.2}}%</td>
                         </tr>
