--- a/unitmanagement/templates/unitmanagement/classified_list.html
+++ b/unitmanagement/templates/unitmanagement/classified_list.html
@@ -48,7 +48,7 @@
 <script type="text/javascript">
 
   
-    $('#tabledata1').DataTable({ "order": [[ 4, "desc" ]]  });
+    $('#tabledata1').DataTable({ "order": [[ 4, "desc" ],[ 1, "asc" ]]  });
     $('.menu .item').tab();
 
 </script>
