--- a/unitmanagement/templates/unitmanagement/health_list_handler.html
+++ b/unitmanagement/templates/unitmanagement/health_list_handler.html
@@ -33,7 +33,7 @@
                 {% for days in data_arr %}{% if forloop.counter == forloop.parentloop.counter %}
                     {% if days < 0 %}
                         <tr class="warning">
-                            <td>{{data.date}}</td>
+                            <td>{{data.date|date:'Y-m-d'}}</td>
                             <td>{{data.dog}}</td>
                             {% if days < 0 %}
                                 {% if days == 1 %}
@@ -56,7 +56,7 @@
                             {% elif data.follow_up_date == None %}
                             <td>No Follow-Up</td>
                             {% else %}
-                            <td>{{data.follow_up_date}}</td>
+                            <td>{{data.follow_up_date|date:'Y-m-d'}}</td>
                             {% endif %}
                             <td class="center aligned three wide">
                                 <a href="{% url 'unitmanagement:health_details' data.id %}"
@@ -65,7 +65,7 @@
                         </tr>
                     {% else %}
                         <tr  class="positive">
-                            <td>{{data.date}}</td>
+                            <td>{{data.date|date:'Y-m-d'}}</td>
                             <td>{{data.dog}}</td>
                             {% if days < 0 %}
                                 {% if days == 1 %}
@@ -88,7 +88,7 @@
                             {% elif data.follow_up_date == None %}
                             <td>No Follow-Up</td>
                             {% else %}
-                            <td>{{data.follow_up_date}}</td>
+                            <td>{{data.follow_up_date|date:'Y-m-d'}}</td>
                             {% endif %}
                             <td class="center aligned three wide">
                                 <a href="{% url 'unitmanagement:health_details' data.id %}"
@@ -104,12 +104,11 @@
 </div>
 <script type="text/javascript">
 
-    $(document).ready(function() {
-        $('#tabledata1').DataTable({
-            "order": [[ 4, "desc" ]]
-        });
-        $('.menu .item').tab();
+  
+    $('#tabledata1').DataTable({
+        "order": [[ 4, "desc" ]]
     });
-
+    $('.menu .item').tab();
+  
 </script>
  {% endblock %}
